[Networking] Remove OnPacketReceived event in favor of binding actions.

--- a/Ceriyo.Tools.UIGenerator/Views/CharacterCreationView.xaml
+++ b/Ceriyo.Tools.UIGenerator/Views/CharacterCreationView.xaml
@@ -26,13 +26,15 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="32"></RowDefinition>
             <RowDefinition Height="32"></RowDefinition>
+            <RowDefinition Height="32"></RowDefinition>
+            <RowDefinition Height="32"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="50"></RowDefinition>
         </Grid.RowDefinitions>
 
 
         <Button
-            Grid.Row="3"
+            Grid.Row="5"
             Grid.Column="0"
             Margin="1,1,1,1"
             Content="Create Character"
@@ -42,7 +44,7 @@
         </Button>
 
         <Button
-            Grid.Row="3"
+            Grid.Row="5"
             Grid.Column="1"
             Margin="1,1,1,1"
             Content="Back"
@@ -51,7 +53,7 @@
         </Button>
 
         <Button
-            Grid.Row="3"
+            Grid.Row="5"
             Grid.Column="2"
             Margin="1,1,1,1"
             Content="Disconnect"
@@ -91,6 +93,24 @@
             Text="{Binding LastName}">
 
         </TextBox>
+
+
+        <TextBlock
+            Grid.Column="0"
+            Grid.Row="2"
+            Text="Class: ">
+
+        </TextBlock>
+
+        <ComboBox
+            Grid.Row="2"
+            Grid.Column="1"
+            Grid.ColumnSpan="2"
+            Margin="4,4,4,4"
+            ItemsSource="{Binding Classes}">
+
+        </ComboBox>
+
     </Grid>
 </ek:UIRoot>
 
