--- a/Ceriyo.Toolset.WPF/Views/ScriptEditorView/ScriptEditor.xaml
+++ b/Ceriyo.Toolset.WPF/Views/ScriptEditorView/ScriptEditor.xaml
@@ -1,9 +1,179 @@
 ﻿<UserControl x:Class="Ceriyo.Toolset.WPF.Views.ScriptEditorView.ScriptEditor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/"             
-             prism:ViewModelLocator.AutoWireViewModel="True">
+             xmlns:prism="http://prismlibrary.com/"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:fa="http://schemas.fontawesome.io/icons/"
+             xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit"
+             xmlns:behaviors="clr-namespace:Ceriyo.Toolset.WPF.Behaviors"
+             d:DesignHeight="300" d:DesignWidth="300"
+             mc:Ignorable="d"
+             prism:ViewModelLocator.AutoWireViewModel="True"
+             Loaded="ScriptEditor_OnLoaded">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="Auto"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="32"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+        </Grid.RowDefinitions>
+
+        <GridSplitter 
+            Grid.Column="2"
+            Grid.Row="0"
+            Grid.RowSpan="4"
+            Width="5"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Stretch"
+            ShowsPreview="True">
+        </GridSplitter>
+
+        <avalonedit:TextEditor
+            x:Name="Editor"
+            Grid.Column="0"
+            Grid.Row="1"
+            Grid.ColumnSpan="2"
+            Grid.RowSpan="3"
+            FontFamily="Consolas"
+            SyntaxHighlighting="Lua"
+            FontSize="12pt"
+            ShowLineNumbers="True">
+            <i:Interaction.Behaviors>
+                <behaviors:AvalonEditBehavior
+                    Text="{Binding ScriptText}">
+                </behaviors:AvalonEditBehavior>
+            </i:Interaction.Behaviors>
+        </avalonedit:TextEditor>
+
+        <TabControl
+            Grid.Row="1"
+            Grid.Column="3"
+            Grid.RowSpan="3">
+
+            <TabItem Header="Methods">
+
+                <ListBox
+                    ItemsSource="{Binding Methods}"
+                    SelectedItem="{Binding SelectedMethod}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Path=Name}"
+                                       Width="{Binding Path=ActualWidth, 
+                                                       RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBox}}}">
+                                <TextBlock.InputBindings>
+                                    <MouseBinding MouseAction="LeftDoubleClick"
+                                                  Command="{Binding DataContext.CopyMethodTextCommand,
+                                                                    RelativeSource={RelativeSource FindAncestor,
+                                                                                                   AncestorType={x:Type UserControl}}}">
+                                    </MouseBinding>
+                                </TextBlock.InputBindings>
+
+                            </TextBlock>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </TabItem>
+
+            <TabItem Header="Constants">
+                <ListBox
+                    ItemsSource="{Binding Constants}"
+                    SelectedItem="{Binding SelectedConstant}">
+                </ListBox>
+            </TabItem>
+
+        </TabControl>
+
+        <GridSplitter 
+            Grid.Column="0"
+            Grid.ColumnSpan="4"
+            Grid.Row="4"
+            Height="5"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Top"
+            ShowsPreview="True"
+            Background="LightGray">
+        </GridSplitter>
+
+
+        <TextBox
+            Grid.Row="5"
+            Grid.Column="0"
+            Grid.ColumnSpan="4"
+            Text="{Binding HelpText}"
+            HorizontalScrollBarVisibility="Auto"
+            VerticalScrollBarVisibility="Auto"
+            IsReadOnly="True"
+            MinHeight="30">
+
+        </TextBox>
+
+        <StackPanel
+            Grid.Column="0"
+            Grid.Row="0"
+            Grid.ColumnSpan="4"
+            Background="LightGray"
+            Orientation="Horizontal">
+
+            <Button 
+                fa:Awesome.Content="ListAlt"
+                Width="32"
+                Height="32"
+                HorizontalAlignment="Left"
+                ToolTip="Compile"
+                Command="{Binding ValidateScriptCommand}">
+
+            </Button>
+
+            <Separator Margin="3,3,3,3"></Separator>
+
+            <Button 
+                fa:Awesome.Content="File"
+                Width="32"
+                Height="32"
+                HorizontalAlignment="Left"
+                ToolTip="New"
+                Command="{Binding NewScriptCommand}">
+            </Button>
+
+            <Separator Margin="3,3,3,3"></Separator>
+
+            <Button 
+                fa:Awesome.Content="FolderOpen"
+                Width="32"
+                Height="32"
+                HorizontalAlignment="Left"
+                ToolTip="Open"
+                Command="{Binding OpenScriptCommand}">
+            </Button>
+            <Button 
+                fa:Awesome.Content="Save"
+                Width="32"
+                Height="32"
+                HorizontalAlignment="Left"
+                ToolTip="Save"
+                Command="{Binding SaveScriptCommand}">
+            </Button>
+
+        </StackPanel>
+
+
     </Grid>
+
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="MouseDoubleClick">
+
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
+
+    
 </UserControl>
