[Master Server] Added ResendVerification end point. [Client] Added Account Help section. Added functionality to request verification code again.

--- a/Ceriyo.Infrastructure.UI/Views/LoginView.xaml
+++ b/Ceriyo.Infrastructure.UI/Views/LoginView.xaml
@@ -65,7 +65,8 @@
             <TextBlock
                 Grid.Column="0"
                 Grid.Row="2"
-                Text="Password">
+                Text="Password"
+                Margin="4,4,4,4">
             </TextBlock>
 
 
